# thruster-sim

./: .gitignore  Cargo.toml  README.md  Trunk.toml  bevy_thruster_sim.d.ts  bevy_thruster_sim.js  bevy_thruster_sim_bg.wasm.d.ts  index.html  thruster-sim.d.ts  thruster-sim.js  thruster-sim_bg.wasm  thruster-sim_bg.wasm.d.ts  trunk.html
.cargo/: config.toml
.github/workflows/: rust.yaml
src/: heuristic.rs  lib.rs  lines.rs  main.rs  main.rs_  motor_code.rs  optimize.rs
