[package]
name = "thruster-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-dual = { git = "https://github.com/itt-ustutt/num-dual.git", rev = "f4123e30702ec3786c44d70ff66c9afc00583338" }
anyhow = "1"
csv = "1"
# ahash = "0.8"
serde = { version = "1", features = ["derive"] }
itertools = "0.13"
time = { version = "0.3", features = ["local-offset"] }
nalgebra = "0.33"

# bevy = { version = "0.12", default-features = false, features = ["animation", "bevy_asset", "bevy_gilrs", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "multi-threaded", "filesystem_watcher", "wayland", "webgl2", "tonemapping_luts", "ktx2", "zstd", "default_font", "dynamic_linking"] }
bevy = { version = "0.14", default-features = false, features = [
  "wayland",
  # "dynamic_linking",
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "vorbis",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
] }
bevy_panorbit_camera = "0.19"
bevy_egui = "0.29"

hexasphere = "12"

rand = "0.8"


# motor_math = { git = "https://github.com/Eoghanmc22/mate-rov-2025.git" }
motor_math = { path = "../mate-rov-2025/motor_math", features = [
  "double_precision",
] }


stable_hashmap = { git = "https://github.com/Eoghanmc22/mate-rov-2025.git" }
[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
debug = false

[profile.web]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 's'
debug = false
