[package]
name = "thruster-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-dual = { git = "https://github.com/Eoghanmc22/num-dual.git", rev = "08b163b101cde7e3fa113a6bb93a6423eaf0b875" }
# num-dual = { path = "../num-dual" }
anyhow = "1"
csv = "1"
# ahash = "0.8"
serde = { version = "1", features = ["derive"] }
itertools = "0.14"
time = { version = "0.3", features = ["local-offset"] }
nalgebra = { version = "0.33", features = ["convert-glam027"] }

bevy = { version = "0.14", default-features = false, features = [
  "wayland",
  # "dynamic_linking",
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "vorbis",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
] }
bevy_panorbit_camera = "0.20"
bevy_egui = "0.30"

hexasphere = "12"

rand = "0.8"


motor_math = { git = "https://github.com/Eoghanmc22/mate-rov-2025.git", features = [
  "double_precision",
] }
# motor_math = { path = "../mate-rov-2025/motor_math", features = [
#   "double_precision",
# ] }
stable_hashmap = { git = "https://github.com/Eoghanmc22/mate-rov-2025.git" }
console_error_panic_hook = "0.1.7"
# stable_hashmap = { path = "../mate-rov-2025/stable_hashmap" }

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
debug = false

[profile.web]
inherits = "release"
lto = true
codegen-units = 1    # bevy = { version = "0.12", default-features = false, features = ["animation", "bevy_asset", "bevy_gilrs", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "multi-threaded", "filesystem_watcher", "wayland", "webgl2", "tonemapping_luts", "ktx2", "zstd", "default_font", "dynamic_linking"] }
opt-level = 's'
debug = false
